examples/test/testpolicy14766.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14766
  namespace: namespace43
spec:
  podSelector:
    matchLabels:
      key1: value36
      key4: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value10
      podSelector:
        matchLabels:
          key41: value0
          key9: value43
